--- a/angut/angut.vcxproj.filters
+++ b/angut/angut.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="service\utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="service\process.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="service\callbacks.hpp">
@@ -57,6 +60,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="handlers\memory_handler.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="service\process.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="handlers\process_handler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
